--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "build": "npm install && npm run build"
+    "build": "node build --output public""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
